--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   </form>
   </body>
 <script>
-  const socket = io('http://192.168.0.19:3000');
+  const socket = io();
   const messageForm = document.getElementById('send-container');
   const messageInput = document.getElementById('message-input');
   const messageContainer = document.getElementById('message-container');
